# embod

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: embod-planner.md
.claude/skills/embod-design/: SKILL.md  examples.md  measurement-checklist.md
.claude/skills/embod-validate/: SKILL.md
.cursor/rules/: embod-core.mdc  embod-project-files.mdc
docs/ai/: agent-workflow.md  claude-code.md  codex.md  cursor.md  example-queries.md  tool-support.md
examples/: diff_drive_robot.py  simple_bracket.py
src/embod/: __init__.py  __main__.py  geometry_pipeline.py  params.py  runtime.py
src/embod/assets/: __init__.py
src/embod/cli/: __init__.py  main.py
src/embod/exporters/: __init__.py  cadquery_export.py  urdf.py
src/embod/loader/: __init__.py  runner.py  runtime.py
src/embod/model/: __init__.py  core.py  diagnostics.py  manifest.py  schema.py
src/embod/sim/: __init__.py  pybullet_runner.py
src/embod/testing/: __init__.py  fixtures.py
src/embod/validators/: __init__.py  project.py
src/embod/viz/: __init__.py  snapshot.py
stubs/cadquery/: __init__.pyi
stubs/pyvista/: __init__.pyi
tests/: __init__.py  conftest.py  support.py  test_ai_fixtures.py  test_cli.py  test_complex_geometry.py  test_core.py  test_exporters.py
tests/fixtures/: __init__.py
tests/fixtures/ai_cases/: __init__.py
tests/fixtures/ai_cases/auto_label/: assertions.yaml  embod_project.py  intent.md
tests/fixtures/ai_cases/bad_robot_graph/: assertions.yaml  embod_project.py  intent.md
tests/fixtures/ai_cases/diff_drive_robot/: assertions.yaml  embod_project.py  intent.md
tests/fixtures/ai_cases/imported_mount/: __init__.py  assertions.yaml  embod_project.py  fixture_asset.step  intent.md
tests/fixtures/ai_cases/oversized_print/: assertions.yaml  embod_project.py  (+1 more)
(+22 files in other folders)
